--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
   background-position-x: center;
   background-position-y: center;
   background-attachment: fixed;
+  background-image: url("hatter.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
 
 #content {
@@ -47,9 +51,35 @@ p.imgtitle {
 table,
 .frame {
   border: 3px solid green;
+  background-color: gainsboro;
+  text-align: center
+  ;
 }
 
 a:link,
 a:visited {
   color: blue;
+  text-decoration: none;
+}
+
+p{
+  text-align: justify;
+  text-indent: 25px;
+}
+
+.imgtitle{
+  text-align: center;
+  font-style: italic;
+  line-height: 130%;
+}
+
+th{
+  background-color: black;
+  color: white;
+  height: 30px;
+}
+
+td{
+  border: solid black 1px;
+  height: 30px;
 }
