--- a/styles.css
+++ b/styles.css
@@ -50,16 +50,19 @@ p.imgtitle {
 
 table,
 .frame {
-  border: 3px solid green;
+  border: 3px solid black;
   background-color: gainsboro;
   text-align: center
   ;
 }
 
+
+
 a:link,
 a:visited {
   color: blue;
   text-decoration: none;
+  
 }
 
 p{
@@ -74,7 +77,7 @@ p{
 }
 
 th{
-  background-color: black;
+  background-color: green;
   color: white;
   height: 30px;
 }
@@ -82,4 +85,8 @@ th{
 td{
   border: solid black 1px;
   height: 30px;
+}
+
+a:hover{
+  color: gold;
 }
